# agentic-rag-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  think_board.md
.github/workflows/: ci.yml  post-merge.yml
alembic/: README.md  env.py
alembic/versions/: 0001_initial_schema.py  0002_add_user_role_constraint.py  0003_add_document_chunk_type.py  0004_add_ocr_chunk_type.py  0005_add_chat_history_tables.py  0006_chat_messages_single_turn_rows.py  0007_remove_legacy_chat_message_columns.py
app/: main.py
app/agent/: README.md  graph.py  state.py
app/agent/nodes/: README.md
app/agent/prompts/: README.md
app/agent/tools/: README.md  graph_generator.py  vector_search.py
app/api/: README.md  dependencies.py
app/api/v1/endpoints/: auth.py  chat.py  common.py  companies.py  documents.py  users.py
app/core/: README.md  config.py  exceptions.py  logger.py  runtime_controls.py  security.py
app/db/: README.md  models.py  session.py
app/db/models/: __init__.py  base.py  chat.py  company.py  documents.py  token_session.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  common.py  companies.py  documents.py  sessions.py  users.py
app/services/: __init__.py  auth_service.py  chat_service.py  common.py  companies_service.py  documents_service.py  users_service.py
app/storage/: __init__.py  base.py  local.py  s3.py
app/worker/: README.md  celery_app.py  tasks.py
docs/: API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  ENDPOINT_ACCESS_MATRIX.md  PRODUCTION_DEPLOYMENT.md  RUNBOOK.md
scripts/: create_superadmin.py  lint_thin_endpoints.py
tests/: README.md  conftest.py  helpers.py
tests/agent/: README.md
tests/api/: README.md
tests/integration/api/: test_chat_endpoints.py  test_documents_endpoints.py  test_users_endpoints.py
tests/unit/services/: test_auth_service.py  test_chat_service.py  test_companies_service.py  test_documents_service.py  test_users_service.py
