[project]
name = "agentic-rag-api"
version = "0.1.0"
description = "Enterprise API for Document Analysis"
requires-python = ">=3.13"
dependencies = [
    # Web framework & server
    "fastapi>=0.136",
    "uvicorn>=0.48",
    "python-multipart>=0.0.29",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.31",
    "psycopg2-binary>=2.9",
    "pgvector>=0.4",

    # Config & validation
    "pydantic-settings>=2.14",

    # Auth & security
    "python-jose[cryptography]>=3.5",
    "bcrypt>=5.0",

    # Task queue
    "celery[redis]>=5.6",

    # AI / LangChain stack
    "langchain-core>=1.4",
    "langchain-huggingface>=1.2",
    "langchain-ollama>=1.1",
    "langchain-text-splitters>=1.1",
    "langgraph>=1.2",
    "sentence-transformers>=5.5",

    # Document processing
    "pypdf>=6.12",

    # Cloud storage
    "boto3>=1.38",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "black>=25.0",
    "interrogate>=1.7",
    "pytest>=8.4",
]

# ---------------------------------------------------------------------------
# Ruff — linting (pycodestyle, pyflakes, isort, pyupgrade, bugbear)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — enforced by black instead
    "B008",   # do not perform function calls in default arguments (FastAPI Depends())
    "UP007",  # use X | Y for union types — Optional kept for broad compatibility in signatures
    "UP042",  # (str, enum.Enum) → StrEnum breaks SQLAlchemy's column value resolver;
              # SQLAlchemy uses .name (uppercase) for StrEnum instead of .value,
              # causing InvalidTextRepresentationError against lowercase DB enum labels
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Black — code formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 120
target-version = ["py313"]

# ---------------------------------------------------------------------------
# Interrogate — docstring coverage
# ---------------------------------------------------------------------------
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
fail-under = 80
verbose = 1
